@@ -2,6 +2,8 @@ Use constants for configuration
 Simplify extreme captcha code generation
 Add language setting to profile
 Add checks for required extensions
+Move some more settings to the database
+Add CSS to limit list of chatters hight
 
 Version 1.15.3 - Mar. 6, 2016
 Allow using html tags in linkfilter without breaking dereferrer or image embed
